deploy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pod-info-service
  namespace: development
  labels:
    app: pod-info
spec:
  selector:
    app: pod-info
  ports:
  - name: http
    port: 80
    targetPort: 3000
